--- a/src/assets/styles/quick-start.css
+++ b/src/assets/styles/quick-start.css
@@ -3,7 +3,7 @@
     gap: 10rem
 }
 
-.quick-start, .quick-start_step__desc, .quick-start_step__content {
+.quick-start, .quick-start_step__title, .quick-start_step__desc, .quick-start_step__content {
     flex-direction: column;
 }
 
@@ -13,7 +13,7 @@
     gap: 30rem;
 }
 
-.quick-start_step__desc {
+.quick-start_step__title, .quick-start_step__desc {
     display: flex;
     gap: 5rem;
     align-items: flex-start;
@@ -21,7 +21,7 @@
 
 .quick-start_step__number {
     border-radius: 50%;
-    padding: 9px 22px;
+    padding: 2.25rem 5.5rem;
     font-size: 10.5rem;
     font-weight: 600;
     line-height: 1.1;
@@ -50,5 +50,86 @@
 @media (max-width: 1220px) {
     .quick-start_step__content {
         padding: 6%;
+    }
+}
+
+@media (max-width: 980px) {
+    .quick-start_step {
+        gap: 15rem;
+    }
+
+    .quick-start_step__number {
+        padding: 1.25rem 3rem;
+        font-size: 6rem;
+        letter-spacing: -0.72px;
+    }
+}
+
+@media (max-width: 768px) {
+    .quick-start_step {
+        gap: 10rem;
+    }
+
+    .quick-start_step__title {
+        flex-direction: row;
+        gap: 4rem;
+    }
+
+    .quick-start_step__desc {
+        gap: 4rem;
+    }
+
+    .list {
+        padding-inline-start: 4rem;
+    }
+}
+
+@media (max-width: 690px) {
+    .quick-start {
+        gap: 6rem;
+    }
+
+    .quick-start .title {
+        text-align: center;
+    }
+
+    .quick-start .title .blue_color{
+        display: block;
+    }
+
+    .quick-start_step {
+        gap: 4rem;
+        flex-direction: column;
+    }
+
+    .quick-start_step.reverse {
+        flex-direction: column-reverse;
+    }
+
+    .quick-start_step__visual {
+        width: 55%;
+    }
+
+    .quick-start_step__title {
+        flex-direction: row;
+        gap: 4rem;
+        justify-content: flex-start;
+        width: 100%;
+    }
+
+    .list {
+        padding-inline-start: 4rem;
+    }
+}
+
+@media (max-width: 590px) {
+    .quick-start_step__visual {
+        width: 70%;
+    }
+}
+
+@media (max-width: 495px) {
+    .quick-start_step__visual {
+        width: 100%;
     }
 }
