--- a/src/style.css
+++ b/src/style.css
@@ -46,6 +46,7 @@
     --three-lightblue-gradient: linear-gradient(98deg, #E8F2F9 15.04%, #E8F2F9 52.22%, #E9F1FA 90.93%);
     --dark-gradient: linear-gradient(220deg, #010417 10.26%, #2B333F 84.25%), linear-gradient(46deg, #000 15.89%, #434343 171.16%);
     --feature-create-app_bg: linear-gradient(240deg, rgba(41, 126, 226, 0.12) 3.57%, rgba(24, 97, 182, 0.12) 86.24%);
+    --feature-create-app_bg-hover: linear-gradient(240deg, rgba(41, 126, 226, 0.18) 3.57%, rgba(24, 97, 182, 0.18) 86.24%);
     --quick_start_step: linear-gradient(220deg, #010417 10.26%, #2B333F 84.25%), linear-gradient(46deg, #000 15.89%, #434343 171.16%);
     --message-preview-color: #1B1C22;
 }
@@ -67,6 +68,7 @@
     --three-lightblue-gradient: #222222;
     --dark-gradient: linear-gradient(78deg, #181818 -16.92%, #2F2F2F 84.29%);
     --feature-create-app_bg: linear-gradient(233deg, #9FCCFA -20.48%, #0974F1 97.38%);
+    --feature-create-app_bg-hover: linear-gradient(240deg, #8bafe5 -20.48%, #064ed5 97.38%);
     --quick_start_step: #ffffff;
     --message-preview-color: #ffffff;
 }
