--- a/src/assets/styles/feature_animation.css
+++ b/src/assets/styles/feature_animation.css
@@ -1,3 +1,4 @@
+/* click animation */
 .arrow_to_btn {
     animation-name: arrow_btn;
     animation-duration: .8s;
@@ -39,6 +40,8 @@
         transform: scale(1.09);
     }
 }
+
+/* currency change animation */
 .shift_currency, .next_currency, .last_currency {
     animation-duration: .7s;
 }
@@ -85,5 +88,86 @@
     }
     to {
         transform: var(--transform);
+    }
+}
+
+/* message change animation */
+.hide_message, .behind_message {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: 0;
+}
+
+.hide_message, .behind_message, .active_message {
+    animation-fill-mode: forwards;
+    animation-duration: .8s;
+    animation-iteration-count: 1;
+}
+
+.hide_message {
+    animation-name: hide_message;
+}
+
+.behind_message {
+    animation-name: behind_message;
+}
+
+.behind_message.preview {
+    animation-name: preview_behind_message;
+}
+
+.active_message {
+    animation-name: active_message;
+}
+
+@keyframes hide_message {
+    from {
+        transform: scale(0.9);
+        opacity: .4;
+    }
+    to {
+        transform: scale(0.85);
+        opacity: 0;
+        display: none;
+    }
+}
+
+@keyframes behind_message {
+    from {
+        transform: translateY(0) scale(1);
+        opacity: 1;
+    }
+    to {
+        transform: translateY(-25px) scale(0.9);
+        opacity: .4;
+        color: transparent;
+    }
+}
+
+@keyframes preview_behind_message {
+    from {
+        transform: translateY(0) scale(1);
+        opacity: 1;
+    }
+    to {
+        transform: translateY(-15px) scale(0.9);
+        opacity: .4;
+        color: transparent;
+    }
+}
+
+@keyframes active_message {
+    0% {
+        opacity: 0;
+        transform: translateY(15px);
+    }
+    15% {
+        opacity: 0.5;
+        transform: translateY(13px);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0);
     }
 }
