--- a/src/style.css
+++ b/src/style.css
@@ -13,6 +13,7 @@
 @import 'assets/styles/api.css';
 @import 'assets/styles/community.css';
 @import 'assets/styles/message.css';
+@import 'assets/styles/feature_animation.css';
 
 .def {
     --api: url('assets/images/api.png');
